# crypto

./: .dockerignore  .env.example  .env.pattern-scanner.example  .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt
.github/workflows/: deploy.yml
deploy/: update.sh
deploy/docker/: entrypoint.sh
pattern_scanner/: .dockerignore  .env.example  Dockerfile  Makefile  alembic.ini  config.py  docker-compose.yml  exceptions.py  field_evaluator.py  indicators.py  main.py  models.py  pyproject.toml  regime_detector.py  requirements.txt  scanner.py  scheduler.py
pattern_scanner/backtest/: stats_builder.py
pattern_scanner/data/: base.py  fetcher.py  universe.py
pattern_scanner/database/: models.py  repository.py  session.py
pattern_scanner/database/migrations/: env.py
pattern_scanner/database/migrations/versions/: 001_initial.py  002_scan_results.py  003_llm_tables.py  004_raw_kline.py  005_llm_fields.py  006_symbol_lifecycle.py
pattern_scanner/llm/: analyst.py  base.py  narrator.py  reviewer.py  schemas.py
pattern_scanner/llm/prompts/: analyst_v1.txt  narrator_v1.txt  reviewer_v1.txt
pattern_scanner/patterns/: definitions.py
pattern_scanner/tasks/: llm_tasks.py
pattern_scanner/tests/: conftest.py  test_database.py  test_fetcher.py  test_field_evaluator.py  test_indicators.py  test_integration.py  test_scanner.py
pattern_scanner/web/: server.py
pattern_scanner/web/static/: index.html
scripts/: binance_rest_poll.py  binance_ws_test.py  cross_exchange_spread.py  okx_ccxt_poll.py  okx_ws_test.py
src/arbitrage/: __init__.py  (+1 more)
(+25 files in other folders)
