[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "pattern-scanner"
version = "1.0.0"
description = "Binance USDT永续合约全市场K线形态识别引擎"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "scipy>=1.11.0",
    "aiohttp>=3.9.0",
    "httpx>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "greenlet>=3.0.0",
    "aiosqlite>=0.19.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "apscheduler>=3.10.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
pattern-scanner = "pattern_scanner.scheduler:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["pattern_scanner/tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["pattern_scanner*"]
